# TSC_Marketing

./: README.md  app.py  app_gradio.py  app_line.py  chat_index.py  index_products.py  product_items.txt  pyproject.toml  rag_response.py  requirements.txt  test_gpu.py
